@@ -1,0 +1,19 @@
+package:
+  name: make_stage1
+  version: 4.0
+
+source:
+  fn: make-4.0.tar.bz2
+  url: ftp://ftp.gnu.org/gnu/make/make-4.0.tar.bz2
+
+build:
+  # If this is a new build for the same version, increment the build
+  # number. If you do not include this key, it defaults to 0.
+  number: 1
+
+  string:
+     build_on_debian_wheezy__p33
+
+about:
+  home: http://www.gnu.org/software/make
+  license: GPL 3
